Updated html and style.css to try to fix the spacing between the nav elements

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ h3 {
 
 nav {
   text-align: center;
-  margin: 20px 0 0 ;
-  padding: 10px 0;
+  margin: 20px  20px 20px;
+  padding: 10px 10px 10pxs;
   }
 
 a{
